# HiParTI

./: .gitignore  CMakeLists.txt  Contributing.md  GettingStarted.md  LICENSE  README.md  build-sample.config  build.sh  run.sh
HiParTIPy/: Buffers.py  Matrix.py  PtiCffi.py  Tensor.py  Vector.py
benchmark/: CMakeLists.txt  Readme.md  convert.c  convert_hicoo.c  loadstore.c  ttt.c  ttt2.c
benchmark/matrix/: CMakeLists.txt  Readme.md  blocksort-partition_mat.c  convert_csr_mat.c  convert_hicoo_mat.c  loadstore_mat.c  reorder_mat.c  sort_mat.c  spmm_csr_mat.c  spmm_hicoo_mat.c  spmm_hicoo_sks_mat.c  spmm_mat.c  spmv_csr_mat.c  spmv_hicoo_mat.c  spmv_mat.c
benchmark/tensor/: Readme.md  convert_hicoo.c  convert_ssp.c  cpd.c  cpd_gpu.cu  cpd_hicoo.c  cpd_hicoo_gpu.cu  dmul.c  dmul_gpu.cu  dup_indr.cu  khatri-rao.c  kronecker.c  loadstore.c  mttkrp.c  mttkrp_gpu.cu  mttkrp_hicoo.c  mttkrp_hicoo_gpu.cu  mttkrp_hicoo_matrixtiling.c  mttkrp_hicoo_reorder.c  mttkrp_hicoo_reorder_matrixtiling.c  mttkrp_reorder.c  reorder.c  smul.c  smul_gpu.cu  sort.c  sttm.c  sttm_gpu.cu  ttm.c  ttm_gpu.cu  ttm_renumber.c  ttm_reorder.c
benchmarkPy/: Readme.md
docs/: Doxyfile
include/: HiParTI.h
matlab/: sptAppendMatrix.c  sptAppendSizeVector.c  sptAppendVector.c  sptConstantMatrix.c  sptConstantVector.c  sptCopyMatrix.c  sptCopySemiSparseTensor.c  sptCopySizeVector.c  sptCopySparseTensor.c  sptCopyVector.c  sptCpdAls.c  sptCudaCpdAls.c  sptCudaMTTKRP.c  sptCudaSparseTensorDotMulEq.c  sptCudaSparseTensorMulMatrix.c  sptDumpKruskalTensor.c  sptDumpMatrix.c  sptDumpSizeVector.c  (+37 more)
(+258 files in other folders)
